[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/treasureBox/pass/rouletteMiniGame1.gd" type="Script" id=1]
[ext_resource path="res://scenes/treasureBox/pass/images/roulette1.png" type="Texture" id=2]
[ext_resource path="res://scenes/treasureBox/pass/images/chooseItem-min1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/firstPage/assets1280x720.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/AGENCYB.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/SHOWG.TTF" type="DynamicFontData" id=7]

[sub_resource type="PhysicsMaterial" id=1]
resource_local_to_scene = true

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="CircleShape2D" id=15]
radius = 14.754

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 6.78174, 59.9315 )

[sub_resource type="DynamicFont" id=9]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=11]
resource_name = "fadeOut"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("textContainer/textMsg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.482968, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "close"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3.6, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "close1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "insert"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="rouletteMiniGame1" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 720.0
margin_bottom = 1280.0
color = Color( 0.0117647, 0, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Sprite" parent="."]
modulate = Color( 0.32549, 0.0196078, 0.227451, 1 )
position = Vector2( 26.1125, 78.1894 )
scale = Vector2( 1.23275, 0.890136 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 540.237, 801.596 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2( 352.978, 435.24 )
rotation = 2.96706
mass = 0.01
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
can_sleep = false
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
process_priority = 5
shape = SubResource( 2 )

[node name="roulette" type="Sprite" parent="RigidBody2D"]
pause_mode = 2
texture = ExtResource( 2 )

[node name="oxygen" type="Label" parent="RigidBody2D/roulette"]
margin_left = -70.5236
margin_top = 145.571
margin_right = 46.4764
margin_bottom = 206.571
rect_rotation = -132.199
custom_fonts/font = SubResource( 3 )
text = "x 24"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blueGem" type="Label" parent="RigidBody2D/roulette"]
margin_left = 62.8784
margin_top = 147.577
margin_right = 158.878
margin_bottom = 208.577
rect_rotation = 176.434
custom_fonts/font = SubResource( 4 )
text = "x 13"
align = 1
valign = 1

[node name="redGem" type="Label" parent="RigidBody2D/roulette"]
margin_left = 155.138
margin_top = 57.2073
margin_right = 247.138
margin_bottom = 118.207
rect_rotation = 130.524
custom_fonts/font = SubResource( 5 )
text = "x 18"
align = 1
valign = 1

[node name="coin" type="Label" parent="RigidBody2D/roulette"]
margin_left = 141.0
margin_top = -96.0
margin_right = 268.0
margin_bottom = -30.0
rect_rotation = 78.0
custom_fonts/font = SubResource( 6 )
text = "x 7"
align = 1
valign = 1

[node name="greenGem" type="Label" parent="RigidBody2D/roulette"]
margin_left = 29.0
margin_top = -155.0
margin_right = 114.0
margin_bottom = -94.0
rect_rotation = 30.0
custom_fonts/font = SubResource( 7 )
text = "x 5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="posContainer" type="Node2D" parent="RigidBody2D"]

[node name="eBallPos" type="Position2D" parent="RigidBody2D/posContainer"]
position = Vector2( -76.0009, 79.231 )

[node name="blueGemPos" type="Position2D" parent="RigidBody2D/posContainer"]
position = Vector2( 4.49911, 119.892 )

[node name="redGemPos" type="Position2D" parent="RigidBody2D/posContainer"]
position = Vector2( 94.7059, 67.9777 )

[node name="starGemPos" type="Position2D" parent="RigidBody2D/posContainer"]
position = Vector2( 129.418, -35.075 )

[node name="greenGemPos" type="Position2D" parent="RigidBody2D/posContainer"]
position = Vector2( 52.9715, -108.104 )

[node name="boxPos" type="Position2D" parent="RigidBody2D/posContainer"]
position = Vector2( -37.8574, -118.33 )

[node name="Area2D" type="Area2D" parent="RigidBody2D" groups=[
"edge",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2( -104.124, 269.957 )
shape = SubResource( 15 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2( -266.211, 99.7187 )
shape = SubResource( 15 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2( -249.643, -144.855 )
shape = SubResource( 15 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2( -182.612, -217.426 )
shape = SubResource( 15 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2( 1.03763, -285.282 )
shape = SubResource( 15 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2( 220.488, -182.738 )
shape = SubResource( 15 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2( 290.364, 55.5021 )
shape = SubResource( 15 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2( 151.074, 253.634 )
shape = SubResource( 15 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 348.168, 138.088 )
shape = SubResource( 16 )

[node name="arrow" type="Sprite" parent="."]
position = Vector2( 327.216, 127.712 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -4.63, -18.37 )
region_enabled = true
region_rect = Rect2( 20, 10, 70, 108 )

[node name="goBackSprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 632.055, 1149.79 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 564, 2, 61, 73 )

[node name="textContainer" type="Node2D" parent="."]

[node name="spinLabel" type="Label" parent="textContainer"]
margin_left = 238.017
margin_top = 1038.46
margin_right = 450.017
margin_bottom = 1107.46
custom_fonts/font = SubResource( 9 )
text = "Spin"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textMsg" type="Label" parent="textContainer"]
modulate = Color( 1, 1, 1, 0.526141 )
margin_left = 63.0791
margin_top = 771.299
margin_right = 647.079
margin_bottom = 1025.3
custom_fonts/font = SubResource( 10 )
text = "Tap on the spin Button"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnContainer" type="Node2D" parent="."]

[node name="spinBtn" type="Button" parent="btnContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 230.15
margin_top = 1030.54
margin_right = 452.15
margin_bottom = 1102.54
__meta__ = {
"_edit_use_anchors_": false
}

[node name="watchVidBtn" type="Button" parent="btnContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 1063.38
margin_top = 452.755
margin_right = 1181.38
margin_bottom = 548.755
disabled = true

[node name="goBack" type="Button" parent="btnContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 593.0
margin_top = 1111.0
margin_right = 674.0
margin_bottom = 1185.0
text = "go back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeOut = SubResource( 11 )

[node name="itemsSpriteContainer" type="Node2D" parent="."]

[node name="startEndAnimation" type="AnimationPlayer" parent="."]
anims/close = SubResource( 13 )
anims/close1 = SubResource( 14 )
anims/insert = SubResource( 12 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="pressed" from="btnContainer/spinBtn" to="." method="_on_spinBtn_pressed"]
[connection signal="pressed" from="btnContainer/watchVidBtn" to="." method="_on_watchVidBtn_pressed"]
[connection signal="pressed" from="btnContainer/goBack" to="." method="_on_goBack_pressed"]
[connection signal="animation_finished" from="startEndAnimation" to="." method="_on_startEndAnimation_animation_finished"]
